[package]
name = "ask_the_angel"
version = "1.0.0"
edition = "2024"

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "time", "parking_lot"] }
anyhow = "1"
rand = { version = "0.9", features = ["thread_rng", "std"], default-features = false }
dirs = "6"

[profile.release]
lto = true
strip = "symbols"
